# CppNotes

./: README.md
Interview/: 1_核心内容.md  2_基础部分.md  3_面向对象.md
gTest/: GMock_note.md  GTest_note.md
gTest/01.test/: test_add.cpp
gTest/02.test/: CMakeLists.txt  test.cpp  test_add.cpp
gTest/03.test/: CMakeLists.txt  add.cpp  main.cpp  test.cpp
gTest/04.test/: CMakeLists.txt  type_struct_test.cpp  type_test.cpp
gTest/05.test/: CMakeLists.txt  func.h  typed_test.cpp
gTest/06.scoped/: scoped_trace.cpp
gTest/06.test/: CMakeLists.txt
gTest/07.friend/: CMakeLists.txt  Circle.h  friend_test.cpp
gTest/08.skip/: CMakeLists.txt  skip_test.cpp
gTest/09.that/: CMakeLists.txt  generalized_assert.cpp
gTest/10.expect/: CMakeLists.txt  expect_throw.cpp
gTest/11.error_message/: CMakeLists.txt  better_error_message.cpp
gTest/12.float_compare/: CMakeLists.txt  compare_float.cpp
gTest/13.string_assert/: CMakeLists.txt  string.cpp
gTest/14.custom_print/: CMakeLists.txt  Circle.cpp
gTest/15.death_test/: CMakeLists.txt  death_test.cpp
gTest/16.expect_assert/: CMakeLists.txt  expect_assert.cpp
gTest/17.assert_spread/: CMakeLists.txt  test_subroutine.cpp
gTest/18.shared_resource/: CMakeLists.txt  shared_resource.cpp
gTest/19.command_line/: CMakeLists.txt  command_line.cpp
gTest/20.gmock_start/: CMakeLists.txt  gmock_start.cpp
gTest/21.call_with_param/: CMakeLists.txt  call_param.cpp
gTest/22.call_times/: CMakeLists.txt  call_times.cpp
gTest/23.set_return/: CMakeLists.txt  set_return.cpp
gTest/24.multiple_expectation/: CMakeLists.txt  multiple.cpp
gTest/25.order/: CMakeLists.txt  order.cpp
gTest/26.template/: CMakeLists.txt  template.cpp
gTest/27.private/: CMakeLists.txt  private_func.cpp
gTest/28.overload/: CMakeLists.txt  overload.cpp
gTest/29.template_class/: CMakeLists.txt  template.cpp
gTest/30.non_virtual/: CMakeLists.txt  non_virtual_func.cpp
gTest/31.free_func/: CMakeLists.txt  free_func.cpp
gTest/32.call_unexpected/: CMakeLists.txt  nice_strict.cpp
gTest/33.multi_parameter_interface/: CMakeLists.txt  multi_parameter.cpp
gTest/34.delegating/: CMakeLists.txt  delegating.cpp
gTest/35.matcher/: CMakeLists.txt  matcher.cpp
gTest/36.args/: CMakeLists.txt
gTest/37.member/: CMakeLists.txt  args.cpp  member.cpp
gTest/38.pointer/: CMakeLists.txt  pointer.cpp
gTest/39.define_matcher/: CMakeLists.txt  define_matcher.cpp
gTest/40.free_obj/: CMakeLists.txt  free_obj.cpp
